--- a/Todo-main/AngularApp/src/app/new-todo/new-todo.component.html
+++ b/Todo-main/AngularApp/src/app/new-todo/new-todo.component.html
@@ -33,7 +33,7 @@
           
           
           <button class="btn btn-primary p-2" [disabled]="!TodoForm.valid" type="submit">
-            Continue to checkout
+            Continue
           </button>
         </form>
       </div>
